added db and docker-compose

--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,11 @@
 RABBIT_HOST=localhost
-RABBIT_USERNAME=
-RABBIT_PASSWORD=
+RABBITMQ_DEFAULT_USER=
+RABBITMQ_DEFAULT_PASS=
 
 RABBIT_MAIN_EXCHANGE_NAME=
 RABBIT_MAIN_EXCHANGE_KEY=
+
+
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
