--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.16.4",
     "pika>=1.3.2",
+    "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.1.1",
     "requests>=2.32.4",
-    "sqlalchemy>=2.0.41",
+    "sqlalchemy[asyncio]>=2.0.41",
 ]
 
 [dependency-groups]
