--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiohttp>=3.12.14",
     "alembic>=1.16.4",
     "pika>=1.3.2",
     "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.1.1",
-    "requests>=2.32.4",
     "sqlalchemy[asyncio]>=2.0.41",
 ]
 
