--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "aiohttp>=3.12.14",
     "alembic>=1.16.4",
+    "google-genai>=1.26.0",
     "pika>=1.3.2",
     "psycopg2-binary>=2.9.10",
     "pytelegrambotapi>=4.27.0",
