Fix deployment script for new paths and Docker syntax

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,19 +21,19 @@ jobs:
         key: ${{ secrets.VPS_SSH_KEY }}
         port: ${{ secrets.VPS_PORT }}
         script: |
-          cd ~/realtor
+          cd /home/due/realtor
           
           # Обновление кода из репозитория
           git pull origin main
           
           # Остановка текущих контейнеров
-          docker-compose down
+          docker compose down
           
           # Удаление старых образов для освобождения места
           docker system prune -f
           
           # Пересборка и запуск контейнеров
-          docker-compose up -d --build
+          docker compose up -d --build
           
           # Проверка статуса контейнеров
-          docker-compose ps
+          docker compose ps
